# Phishing-detection-platform

./: .env.example  .replit  ADMIN_FIXES_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  CROSS_PLATFORM_SETUP.md  DEPENDENCIES.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  MONGODB_ATLAS_INTEGRATION.md  MONGODB_SETUP.md  PRODUCTION_CHECKLIST.md  PROJECT_FINAL_STATUS.md  README.md  WINDOWS_FIXES_SUMMARY.md  WINDOWS_INSTALLATION.md  WINDOWS_SETUP.md  admin_cookies.txt  admin_routes.py  admin_routes_backup.py  admin_routes_broken.py  admin_session_cookies.txt  advanced_threat_intel.py  ai_content_detector.py  app.py  auth_routes.py  complete_mongodb_integration.py  cookies.txt  create_admin_session.py  create_demo_accounts.py  encryption_utils.py  final_test_cookies.txt  fix_db_references.py  fix_local_environment.py  headers.txt  install_dependencies.py  install_windows.py  main.py  ml_detector.py  models.py  (+40 more)
analysis_results/: 1ff436c6b9731ce657876d269bb80bc9_20250604_093643.json  3fa4dd0eafc20e2f2d7cbb2fd9d2f90b_20250604_094358.json  469865a4c4b7b26d1efd1e79ca61af3c_20250604_102805.json  54e63b99d3ba92ff6ca9cab7fa52a04b_20250604_092654.json  6e1911ebb529cece9bf9d321934bf35a_20250604_092107.json  6ff2d8be30279ece1b6c785cf0bc4b75_20250605_213703.json  a2684103b57e04cbc705195cc377de39_20250604_094700.json  bc6daf42cb37acf601c336743c0eab2d_20250604_092310.json  bcfb2700bdac5166c9894bf1b97eb4f6_20250604_102138.json  c10e9f09002eae6758a30805b92250a7_20250604_091542.json  fa1292a7eed681692b1f377ace030979_20250604_091914.json  sample_analysis.json
attached_assets/: Pasted--Failed-to-install-packages-Command-venv-Scripts-python-exe-m-pip-install-r--1749292899001_1749292899002.txt  Pasted--Failed-to-install-packages-Command-venv-Scripts-python-exe-m-pip-install-r--1749293691199_1749293691200.txt  (+8 more)
config/: settings.py
data/: detections.json  login_logs.json  ml_config.json  users.json  (+3 more)
(+56 files in other folders)
