[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask-pymongo>=3.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "anthropic>=0.52.2",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.14.0",
    "cryptography>=45.0.3",
    "motor>=3.7.1",
    "bson>=0.5.10",
]
