[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "beautifulsoup4==4.12.2",
    "cryptography==41.0.7",
    "dnspython==2.4.2",
    "email-validator==2.1.0",
    "flask==2.3.3",
    "nltk==3.8.1",
    "passlib==1.7.4",
    "pillow==9.5.0",
    "pymongo==4.5.0",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "trafilatura==1.6.4",
]
